# cpp_sockets

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  simple_cpp_sockets.h  sockets.sln
.github/: ci.yml
ConsoleApplication2/: ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters  tcp_server.h
ConsoleApplication2/Debug/: vc140.idb
ConsoleApplication2/Debug/ConsoleA.3C93397B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: ConsoleApplication2.ilk
code/: base_socket.cpp  base_socket.h  main.cpp  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
include/project/: base_socket.h  tcp_client.h  tcp_server.h  udp_client.h  udp_server.h
src/: main.cpp  simple_cpp_sockets.h
src/project/: CMakeLists.txt  base_socket.cpp  main.cpp  main1.cpp  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
